--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "rich>=13.0.0",
     "pydantic>=2.0.0",
     "python-calamine>=0.2.0",
+    "xlsxwriter>=3.2.9",
+    "fastexcel>=0.16.0",
 ]
 
 [project.scripts]
