--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "xlsxwriter>=3.2.9",
     "fastexcel>=0.16.0",
     "sqlmodel>=0.0.31",
+    "fastapi>=0.128.0",
+    "uvicorn>=0.39.0",
+    "jinja2>=3.1.6",
 ]
 
 [project.scripts]
